--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page-accueil">
   <div class="container mt-5">
     <h1 class="text-center">Bienvenue sur mon portfolio</h1>
     <p class="lead text-center">Développeur passionné</p>
+
+
+
+
   </div>
 
   <script src="script.js"></script>
